...
    }
}

@Composable
fun rememberOpenBuckets(): OpenBuckets {
    val context = LocalContext.current
    return remember { OpenBuckets.of(context.getSharedPreferences("detail", Context.MODE_PRIVATE)) }
}

